// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with 1 expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    €350,00
     
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    €1000,00
     
  </h1>
</div>
`;
